--- a/Ron/房東/房東_加入新房源/AddHouse01/AddHouse01.html
+++ b/Ron/房東/房東_加入新房源/AddHouse01/AddHouse01.html
@@ -50,6 +50,9 @@
 
 
         /* 選項 */
+        .Options{
+            max-height: 100vh;
+        }
         .OptionCards {
             max-height: 100px;
             border: 2px solid #aaa;
@@ -79,32 +82,30 @@
                 <h3>你想出租哪種類型的房源?</h3>
             </div>
             <!-- 選項 -->
-            <div class="col-md-6 Options ">
-                <div class="row justify-content-center mt-5 pt-3">
+            <div class="col-md-6 Options">
+                <div class="row justify-content-center  pt-3">
 
                     <button class="col-8 OptionCards d-flex justify-content-between mt-3 btn bg-white ">
                         <span>公寓</span>
-                        <img src="/add01_01_apart.jpg" alt="">
+                        <img src="./add01_01_apart.jpg" alt="">
                     </button>
                     <button class="col-8 OptionCards d-flex justify-content-between mt-3 btn bg-white ">
                         <span>獨棟房屋</span>
-                        <img src="/add01_02.jpg" alt="">
+                        <img src="./add01_02.jpg" alt="">
                     </button>
-                    <button class="col-8 OptionCards d-flex justify-content-between mt-3 btn bg-white ">
-                        <span>附屬建築</span>
-                        <img src="/add01_03.jpg" alt="">
+
                     </button>
                     <button class="col-8 OptionCards d-flex justify-content-between mt-3 btn bg-white ">
                         <span>獨特房源</span>
-                        <img src="/add01_04.jpg" alt="">
+                        <img src="./add01_04.jpg" alt="">
                     </button>
                     <button class="col-8 OptionCards d-flex justify-content-between mt-3 btn bg-white ">
                         <span>家庭式旅館</span>
-                        <img src="/add01_05.jpg" alt="">
+                        <img src="./add01_05.jpg" alt="">
                     </button>
                     <button class="col-8 OptionCards d-flex justify-content-between mt-3 btn bg-white ">
                         <span>精品旅店</span>
-                        <img src="/add01_06.jpg" alt="">
+                        <img src="./add01_06.jpg" alt="">
                     </button>
                     <div class="col-12 nextstep mt-5 d-flex  p-4">
                         <a href="#" class="text-black">返回</a>
