--- a/Ron/房東/Layout_房東navbar/Layout_房東navbar.html
+++ b/Ron/房東/Layout_房東navbar/Layout_房東navbar.html
@@ -88,7 +88,7 @@
                                 
                                 <div class="img-ctrl">
                                     <!-- 放使用者頭像 -->
-                                    <img src="/creatures of corner.png" alt="" class="img-fluid">
+                                    <img src="./creatures of corner.png" alt="" class="img-fluid">
                                 </div>
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown2">
