--- a/Ron/房東/房東_加入新房源/AddHouse03/AddHouse03_map.html
+++ b/Ron/房東/房東_加入新房源/AddHouse03/AddHouse03_map.html
@@ -12,70 +12,67 @@
 
     <title>document</title>
     <style>
-        /* .container-fluid{
-            height: 100%;
-        } */
         .Question {
-            background-image: linear-gradient(#CC277D, #441CA2);
-            height: 40vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+        background-image: linear-gradient(#CC277D, #441CA2);
+        height: 40vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         }
 
         .Question>h3 {
-            text-align: center;
-            line-height: 3em;
-            font-size: 24px;
-            color: white;
+        text-align: center;
+        line-height: 3em;
+        font-size: 24px;
+        color: white;
         }
 
         @media screen and (min-width:768px) {
-            .Question {
-                background-image: linear-gradient(#CC277D, #441CA2);
-                height: 100vh;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-            }
+        .Question {
+        background-image: linear-gradient(#CC277D, #441CA2);
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        }
 
-            .Question>h3 {
-                text-align: center;
-                line-height: 3em;
-                font-size: 48px;
-                color: white;
-            }
+        .Question>h3 {
+        text-align: center;
+        line-height: 3em;
+        font-size: 48px;
+        color: white;
+        }
         }
 
         .Options>.row {
-            height: 100vh;
+        height:100vh;
 
         }
 
         /* 選項 */
         .OptionCards {
-            max-height: 100px;
-            border: 2px solid #aaa;
-            border-radius: 5px;
-            padding: 20px;
+        max-height: 100px;
+        border:1px solid #B0B0B0;
+        border-radius: 5px;
+        padding: 20px;
 
         }
 
         .OptionCards>span {
-            margin: auto 0;
-            font-weight: 600;
+        margin: auto 0;
+        font-weight: 600;
         }
 
         .nextstep {
-            margin-top: auto;
-            /* max-height: 100px; */
-            border-top: 1px solid #aaa;
+        margin-top: auto;
+        /* max-height: 100px; */
+        border-top: 1px solid #aaa;
         }
 
         #map {
             /* 給地圖寬跟高 */
             width: 100%;
-            min-height: 600px;
+            min-height: 70vh;
             /* 詳細設定且為手機時地圖不見 */
             /* display: none; */
         }
