--- a/Elijah/房客搜尋模組/房源搜尋/search/search.html
+++ b/Elijah/房客搜尋模組/房源搜尋/search/search.html
@@ -146,16 +146,16 @@
                                 </div>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="https://picsum.photos/300/200/?random=10"
-                                            class="d-block rounded" alt="...">
+                                        <img src="https://picsum.photos/300/400/?random=10"
+                                            class="d-block rounded w-100" alt="...">
                                     </div>
                                     <div class="carousel-item">
                                         <img src="https://picsum.photos/300/200/?random=20"
-                                            class="d-block rounded" alt="...">
+                                            class="d-block rounded w-100" alt="...">
                                     </div>
                                     <div class="carousel-item">
                                         <img src="https://picsum.photos/300/200/?random=30"
-                                            class="d-block rounded" alt="...">
+                                            class="d-block rounded w-100" alt="...">
                                     </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button"
