--- a/Ron/房東/房東_加入新房源/AddHouse04/AddHouse04.html
+++ b/Ron/房東/房東_加入新房源/AddHouse04/AddHouse04.html
@@ -14,9 +14,6 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>document</title>
     <style>
-        /* .container-fluid{
-            height: 100%;
-        } */
         .Question {
             background-image: linear-gradient(#CC277D, #441CA2);
             height: 40vh;
@@ -47,30 +44,45 @@
                 font-size: 48px;
                 color: white;
             }
-        }
 
-        .Options>.row {
-            height: 100vh;
 
         }
+
+        @media screen and (max-width:767px) {
+            .Options>.OptionsRow4 {
+                height: calc(100% + 300px);
+
+            }
+        }
+
+        /* .Options{
+        height: 100vh;
+        } */
 
         /* 選項 */
-        .OptionCards {
+        .OptionsRow4>.OptionCards {
             max-height: 100px;
-            border: 2px solid #aaa;
+            margin: 10px;
+            border: 1px solid #B0B0B0;
             border-radius: 5px;
             padding: 20px;
 
+
         }
 
-        .OptionCards>span {
+        .OptionsRow4 .OptionCards>span {
             margin: auto 0;
             font-weight: 600;
         }
 
         .nextstep {
-            margin-top: auto;
+            /* margin-top: auto; */
             /* max-height: 100px; */
+            background-color: white;
+            z-index: 2;
+            position: fixed;
+            bottom: 0px;
+            height: 100px;
             border-top: 1px solid #aaa;
         }
 
@@ -98,7 +110,6 @@
         i {
             font-size: 24px;
         }
-
     </style>
 </head>
 
@@ -110,9 +121,9 @@
                 <h3>你打算接待幾位房客?</h3>
             </div>
             <!-- 選項 -->
-            <div class="col-md-6 col-12 Options">
-                <div class="row justify-content-center pt-5 ">
-                    <div class="col-12 col-md-8 mt-5">
+            <div class="col-md-6 col-12 Options pt-md-5">
+                <div class="row justify-content-center align-content-center pt-md-5 OptionsRow4 ">
+                    <div class="col-12 col-md-8">
                         <div class="form-outline">
                             <span>房客</span>
                             <span>
@@ -153,8 +164,9 @@
                             </span>
                         </div>
                     </div>
-
-                    <div class="col-12 nextstep  d-flex  py-4 ">
+                </div>
+                <div class="row">
+                    <div class="col-12 nextstep  d-flex  p-4">
                         <a href="#" class="text-black">返回</a>
                         <button class="btn btn-dark ms-auto"><a href="#"
                                 class="text-decoration-none text-white">下一步</a></button>
