--- a/Elijah/房客搜尋模組/房源搜尋/search/search.html
+++ b/Elijah/房客搜尋模組/房源搜尋/search/search.html
@@ -612,7 +612,7 @@
             <!-- 地圖 -->
             <div class="col-12 col-md-5 map-container d-md-block d-none">
                 <div class="map">
-                    <img class="mapimg" src="https://picsum.photos/400/400/?random=10">
+                    <img class="mapimg w-100" src="https://picsum.photos/400/400/?random=10">
                 </div>
             </div>
         </div>
