--- a/Elijah/房客搜尋模組/房源搜尋/search/search.html
+++ b/Elijah/房客搜尋模組/房源搜尋/search/search.html
@@ -115,7 +115,7 @@
                 <!-- card -->
                 <div class="card mb-3 mx-3">
                     <div class="row g-0">
-                        <div class="col-md-4">
+                        <div class="col-md-4 cardImgBox">
                             <div id="carouselIndicators-1" class="carousel slide" data-bs-ride="carousel">
                                 <div class="carousel-indicators">
                                     <button type="button" data-bs-target="#carouselIndicators-1" data-bs-slide-to="0"
@@ -127,16 +127,16 @@
                                 </div>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="https://picsum.photos/300/400/?random=10"
-                                            class="d-block rounded w-100" alt="...">
+                                        <img src="https://picsum.photos/300/200/?random=10"
+                                            class="d-block w-100 rounded" alt="...">
                                     </div>
                                     <div class="carousel-item">
                                         <img src="https://picsum.photos/300/200/?random=20"
-                                            class="d-block rounded w-100" alt="...">
+                                            class="d-block w-100 rounded" alt="...">
                                     </div>
                                     <div class="carousel-item">
                                         <img src="https://picsum.photos/300/200/?random=30"
-                                            class="d-block rounded w-100" alt="...">
+                                            class="d-block w-100 rounded" alt="...">
                                     </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button"
