add switch map&list btn

--- a/Elijah/房客搜尋模組/房源搜尋/search/search.html
+++ b/Elijah/房客搜尋模組/房源搜尋/search/search.html
@@ -598,6 +598,9 @@
             </div>
         </div>
     </div>
+    <button type="button" id="btn-switch-map-list" class="btn btn-primary rounded-pill d-md-none">
+        地圖
+    </button>
     <!-- 價格Modal -->
     <div class="modal fade" id="priceModal" tabindex="-1" aria-labelledby="priceModalLabel" aria-hidden="true">
         <div class="modal-dialog">
