--- a/Ron/房東/Layout_房東navbar/Layout_房東navbar.html
+++ b/Ron/房東/Layout_房東navbar/Layout_房東navbar.html
@@ -36,7 +36,7 @@
         #navbarScrollingDropdown2::after {
             content: none;
         }
-        /* 調整usericon的位置及下拉彈出要在視窗內部 */
+        /* 調整usericon的位置及下拉彈出要在視窗內部喔 喔喔喔喔喔*/
         @media screen and (min-width:768px) {
             #user_icon {
                 margin-left: calc(35vw - 50px);
