--- a/Elijah/確認訂購/booking.html
+++ b/Elijah/確認訂購/booking.html
@@ -52,20 +52,44 @@
                         </div>
                     </div>
                 </div>
-                <div class="">
+                <div class="border-bottom">
                     <h3>價格詳情</h3>
                     <div class="d-flex justify-content-between">
                         <p>$<span>11,301.26</span>x<span>7</span>晚</p>
                         <p>$<span>79,108.82</span></p>
                     </div>
                     <div class="d-flex justify-content-between">
+                        <p>清潔費</p>
+                        <p>$<span>11,726.65</span></p>
+                    </div>
+                    <div class="d-flex justify-content-between">
                         <p>服務費</p>
+                        <p>$<span>11,726.65</span></p>
+                    </div>
+                    <div class="d-flex justify-content-between">
+                        <p>稅金及其他費用</p>
                         <p>$<span>11,726.65</span></p>
                     </div>
                     <div class="d-flex justify-content-between fw-bold">
                         <p>總價(TWD)</p>
                         <p>$<span>11,726.65</span></p>
                     </div>
+                </div>
+                <div class="border-bottom my-3">
+                    <h3>你的旅程</h3>
+                    <div>
+                        <div class="d-flex justify-content-between fw-bold">
+                            <p class="mb-0">日期</p>
+                            <p class="mb-0">編輯</p>
+                        </div>
+                        <p>4月5日至7日</p>
+                    </div>
+                    
+                    <div>
+                        <p class="fw-bold mb-0">房客人數</p>
+                        <p><span>5</span>位房客</p>
+                    </div>
+                    
                 </div>
             </div>
 
