--- a/Elijah/確認訂購/booking.html
+++ b/Elijah/確認訂購/booking.html
@@ -24,8 +24,8 @@
             </a>
         </div>
     </nav>
-    <div class="container-fluid advance-search d-flex justify-content-center">
-        <div class="align-items-center d-flex flex-row my-2 w-75 page-title">
+    <div class="container-fluid d-flex justify-content-center">
+        <div class="align-items-center d-flex w-75 page-title">
             <a href=""><i class="fas fa-chevron-left"></i></a>
             <h2 class="fw-bold ms-3 my-auto">確認並付款</h2>
         </div>
@@ -36,7 +36,7 @@
             <div class="col-12 col-md-6">
                 <div class="room-info d-flex">
                     <div class="imgbox">
-                        <img id="roomimg" class="rounded" src="https://picsum.photos/326/296/?random=10">
+                        <img id="roomimg" class="rounded" src="https://picsum.photos/700/500/?random=10">
                     </div>
                     <div class="room-point">
                         <div class="d-flex flex-column">
@@ -103,10 +103,10 @@
                     <h3>旅程必填資訊</h3>
                     <p class="fw-bold">傳訊息給房東</p>
                     <div class="d-flex">
-                        <div class="landlord-picture">
-                            <img src="./user_pic-225x225.png">
+                        <div class="landlord-picture col-md-2">
+                            <img class="rounded-circle" src="./user_pic-225x225.png">
                         </div>
-                        <div class="landlord-message">
+                        <div class="landlord-message col-md-10">
                             <p class="fw-bold">chu</p>
                             <div class="d-block">
                                 感謝您選擇敝舍做為您旅途的休息站,誠摯的歡迎您來蒞臨,
