--- a/Elijah/確認訂購/booking.html
+++ b/Elijah/確認訂購/booking.html
@@ -25,7 +25,7 @@
         </div>
     </nav>
     <div class="container-fluid d-flex justify-content-center">
-        <div class="align-items-center d-flex w-75 page-title">
+        <div class="align-items-center d-flex w-75 p-3 page-title">
             <a href=""><i class="fas fa-chevron-left"></i></a>
             <h2 class="fw-bold ms-3 my-auto">確認並付款</h2>
         </div>
@@ -34,11 +34,11 @@
     <div class="container confirm w-75">
         <div class="row">
             <div class="col-12 col-md-6">
-                <div class="room-info d-flex">
+                <div class="room-info d-flex d-md-none">
                     <div class="imgbox">
                         <img id="roomimg" class="rounded" src="https://picsum.photos/700/500/?random=10">
                     </div>
-                    <div class="room-point">
+                    <div class="room-point px-3">
                         <div class="d-flex flex-column">
                             <div>
                                 <p class="mb-0"><small class="text-muted">房源類別xxx的房源類別yyy</small>
@@ -52,7 +52,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="border-bottom">
+                <div class="border-bottom d-md-none">
                     <h3>價格詳情</h3>
                     <div class="d-flex justify-content-between">
                         <p>$<span>11,301.26</span>x<span>7</span>晚</p>
@@ -122,10 +122,61 @@
                         <textarea class="form-control" id="tolandlord" rows="3"></textarea>
                     </div>
                 </div>
+                <div class="border-bottom my-3">
+                    <h3>退訂政策</h3>
+                    <p>3月31日下午4:00 前可免費取消。 在這之後，若在 4月5日 下午4:00 前取消預訂，房客可獲得 50% 的退款，但不包含首晚房費和服務費。</p>
+                    <p>我們的《特殊情況政策》不適用因新冠疫情而受影響的旅程。</p>
+                </div>
+                <div class="my-3">
+                    <p><small>點選以下按鈕即代表我同意房東的《房屋守則》、Airbnb 針對新冠肺炎疫情的安全措施，以及《旅客退款政策》。</small></p>
+                    <button class="btn btn-danger">確認並付款</button>
+                </div>
             </div>
 
             <div class="col-12 col-md-6">
+                <div id="right">
+                <div class="room-info  d-md-flex d-none">
+                    <div class="imgbox">
+                        <img id="roomimg" class="rounded" src="https://picsum.photos/700/500/?random=10">
+                    </div>
+                    <div class="room-point px-3">
+                        <div class="d-flex flex-column">
+                            <div>
+                                <p class="mb-0"><small class="text-muted">房源類別xxx的房源類別yyy</small>
+                                </p>
+                                <h5 class="card-title">Title台南中心雙人房</h5>
+                            </div>
+                            <div>
+                                <p><i class="fas fa-star"></i><small class="text-muted">4.88(277則評價)</small></p>
+                            </div>
 
+                        </div>
+                    </div>
+                </div>
+                <div class="border-bottom d-md-block d-none">
+                    <h3>價格詳情</h3>
+                    <div class="d-flex justify-content-between">
+                        <p>$<span>11,301.26</span>x<span>7</span>晚</p>
+                        <p>$<span>79,108.82</span></p>
+                    </div>
+                    <div class="d-flex justify-content-between">
+                        <p>清潔費</p>
+                        <p>$<span>11,726.65</span></p>
+                    </div>
+                    <div class="d-flex justify-content-between">
+                        <p>服務費</p>
+                        <p>$<span>11,726.65</span></p>
+                    </div>
+                    <div class="d-flex justify-content-between">
+                        <p>稅金及其他費用</p>
+                        <p>$<span>11,726.65</span></p>
+                    </div>
+                    <div class="d-flex justify-content-between fw-bold">
+                        <p>總價(TWD)</p>
+                        <p>$<span>11,726.65</span></p>
+                    </div>
+                </div>
+                </div>
             </div>
         </div>
     </div>
