房東add調整  按鈕消失處理 解析度顯示問題處理

--- a/Ron/房東/房東_加入新房源/AddHouse01/AddHouse01.html
+++ b/Ron/房東/房東_加入新房源/AddHouse01/AddHouse01.html
@@ -43,6 +43,10 @@
                 color: white;
             }
 
+            .nextstep {
+                width: 50vw;
+            }
+
 
         }
 
@@ -59,12 +63,12 @@
 
         /* 選項 */
         .OptionsRow1>.OptionCards {
-            height: 130px;
+            height: 100px;
             margin: 10px;
             border: 1px solid #B0B0B0;
             border-radius: 5px;
             padding: 20px;
-            
+
 
         }
 
@@ -95,22 +99,22 @@
             </div>
             <!-- 選項 -->
             <div class="col-md-6 Options">
-                <div class="row justify-content-center  pt-5 OptionsRow1 mb-3 align-content-center ">
-                    <button class="col-8 OptionCards d-flex justify-content-between mt-3 btn bg-white ">
+                <div class="row justify-content-center  pt-5 OptionsRow1 mb-3 align-content-center align-items-center ">
+                    <button class="col-8 OptionCards d-flex justify-content-between mt-md-3 btn bg-white ">
                         <span>公寓</span>
                         <img src="./add01_01_apart.jpg" alt="">
                     </button>
-                    <button class="col-8 OptionCards d-flex justify-content-between mt-3 btn bg-white ">
+                    <button class="col-8 OptionCards d-flex justify-content-between mt-md-3 btn bg-white ">
                         <span>獨棟房屋</span>
                         <img src="./add01_02.jpg" alt="">
                     </button>
 
                     </button>
-                    <button class="col-8 OptionCards d-flex justify-content-between mt-3 btn bg-white ">
+                    <button class="col-8 OptionCards d-flex justify-content-between mt-md-3 btn bg-white ">
                         <span>獨特房源</span>
                         <img src="./add01_04.jpg" alt="">
                     </button>
-                    <button class="col-8 OptionCards d-flex justify-content-between mt-3 btn bg-white ">
+                    <button class="col-8 OptionCards d-flex justify-content-between mt-md-3btn bg-white ">
                         <span>家庭式旅館</span>
                         <img src="./add01_05.jpg" alt="">
                     </button>
