--- a/Ron/房東/房東_加入新房源/AddHouse02/AddHouse02.html
+++ b/Ron/房東/房東_加入新房源/AddHouse02/AddHouse02.html
@@ -43,6 +43,10 @@
                 color: white;
             }
 
+            .nextstep {
+                width: 50vw;
+            }
+
 
         }
 
@@ -59,7 +63,7 @@
 
         /* 選項 */
         .OptionsRow2>.OptionCards {
-            height: 140px;
+            height: 100px;
             margin: 10px;
             border: 1px solid #B0B0B0;
             border-radius: 5px;
@@ -94,9 +98,8 @@
                 <h3>房客會入住哪種空間?</h3>
             </div>
             <!-- 選項 -->
-            <div class="col-md-6 col-12 Options pt-5 ">
-                <div
-                    class="row justify-content-center  pt-5 OptionsRow2 align-content-md-center">
+            <div class="col-md-6 col-12 Options pt-md-5 ">
+                <div class="row justify-content-center  pt-md-5 OptionsRow2 align-content-center">
 
                     <button class="col-8 OptionCards d-flex justify-content-between mt-md-5 btn bg-white ">
 
