--- a/Ron/房東/房東_加入新房源/AddHouse04/AddHouse04.html
+++ b/Ron/房東/房東_加入新房源/AddHouse04/AddHouse04.html
@@ -45,6 +45,10 @@
                 color: white;
             }
 
+            .nextstep {
+                width: 50vw;
+            }
+
 
         }
 
