--- a/Ron/房東/房東_加入新房源/AddHouse05/AddHouse05_Service.html
+++ b/Ron/房東/房東_加入新房源/AddHouse05/AddHouse05_Service.html
@@ -47,6 +47,10 @@
                 font-size: 48px;
                 color: white;
             }
+
+            .nextstep {
+                width: 50vw;
+            }
         }
 
         @media screen and (max-width:767px) {
@@ -55,6 +59,7 @@
 
             }
         }
+
         /* 選項 */
         .OptionsRow5>.OptionCards {
             height: 150px;
