--- a/Ron/房東/房東_加入新房源/AddHouse09/AddHouse09_Price.html
+++ b/Ron/房東/房東_加入新房源/AddHouse09/AddHouse09_Price.html
@@ -46,6 +46,9 @@
                 font-size: 48px;
                 color: white;
             }
+            .nextstep{
+                width: 50vw;
+            }
         }
 
         @media screen and (max-width:767px) {
@@ -79,6 +82,7 @@
         .nextstep {
             /* margin-top: auto; */
             /* max-height: 100px; */
+            
             background-color: white;
             z-index: 2;
             position: fixed;
