--- a/Ron/房東/房東_加入新房源/AddHouse06/AddHouse06.html
+++ b/Ron/房東/房東_加入新房源/AddHouse06/AddHouse06.html
@@ -47,6 +47,10 @@
                 font-size: 48px;
                 color: white;
             }
+
+            .nextstep {
+                width: 50vw;
+            }
         }
 
         @media screen and (max-width:767px) {
