--- a/Ron/房東/房東_加入新房源/AddHouse07/AddHouse07.html
+++ b/Ron/房東/房東_加入新房源/AddHouse07/AddHouse07.html
@@ -44,6 +44,10 @@
                 font-size: 48px;
                 color: white;
             }
+
+            .nextstep {
+                width: 50vw;
+            }
         }
 
         @media screen and (max-width:767px) {
@@ -104,8 +108,8 @@
                 <h3>來為房源取名吧</h3>
             </div>
             <!-- 照片 -->
-            <div class="col-md-6 col-12 Options pt-5 ">
-                <div class="row justify-content-center pt-5 OptionsRow7  ">
+            <div class="col-md-6 col-12 Options pt-md-5 ">
+                <div class="row justify-content-center pt-md-5 OptionsRow7  ">
                     <div class="col-10 col-md-8 my-auto pt-md-5">
                         <h3 class="fw-bolder mb-4">建立標題</h3>
                         <textarea class="w-100" name="" id="" cols="10" rows="5" maxlength="50" required></textarea>
