--- a/Ron/房東/房東_加入新房源/AddHouse08/AddHouse08_detail.html
+++ b/Ron/房東/房東_加入新房源/AddHouse08/AddHouse08_detail.html
@@ -44,6 +44,10 @@
                 font-size: 48px;
                 color: white;
             }
+
+            .nextstep {
+                width: 50vw;
+            }
         }
 
         @media screen and (max-width:767px) {
