--- a/Ron/房東/房東_加入新房源/AddHouse08/AddHouse08_detail.html
+++ b/Ron/房東/房東_加入新房源/AddHouse08/AddHouse08_detail.html
@@ -107,7 +107,7 @@
                 <h3>來為房源取名吧</h3>
             </div>
             <!-- 照片 -->
-            <div class="col-md-6 col-12 Options pt-5  ">
+            <div class="col-md-6 col-12 Options pt-md-5  ">
                 <div class="row justify-content-center pt-md-5 OptionsRow8 ">
                     <div class="col-10 col-md-8 my-auto pt-md-5">
                         <h3 class="fw-bolder mb-4">撰寫房源描述</h3>
