--- a/Ron/房東/房東_加入新房源/AddHouse05/AddHouse05_Service.html
+++ b/Ron/房東/房東_加入新房源/AddHouse05/AddHouse05_Service.html
@@ -62,7 +62,7 @@
 
         /* 選項 */
         .OptionsRow5>.OptionCards {
-            height: 150px;
+            height: 100px;
             border: 2px solid #DDDDDD;
             border-radius: 10px;
             padding: 20px;
@@ -103,13 +103,13 @@
             </div>
             <!-- 選項 -->
             <div class="col-md-6 col-12 Options ">
-                <div class="row justify-content-center pt-5 OptionsRow5 align-content-center">
+                <div class="row justify-content-center pt-md-5 OptionsRow5 align-content-center">
 
-                    <button class="col-5 OptionCards d-flex ms-auto me-3 mt-5 btn bg-white justify-content-center">
+                    <button class="col-5 OptionCards d-flex ms-auto me-3 mt-md-5 btn bg-white justify-content-center">
                         <i class="fas fa-wifi"></i>
                         <span>WiFi</span>
                     </button>
-                    <button class="col-5 OptionCards d-flex me-auto mt-5 btn bg-white justify-content-center">
+                    <button class="col-5 OptionCards d-flex me-auto mt-md-5 btn bg-white justify-content-center">
                         <i class="fas fa-sink"></i>
                         <span>廚房</span>
                     </button>
