search add switch map function

--- a/Elijah/房客搜尋模組/房源搜尋/search/search.html
+++ b/Elijah/房客搜尋模組/房源搜尋/search/search.html
@@ -1010,19 +1010,8 @@
         crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
-
-    <script>
-        var windowHeight = window.innerHeight;
-        console.log(windowHeight);
-    </script>
-    <script>
-        $(function(){
-            $('#datepicker-start').datepicker();
-            $('#datepicker-end').datepicker();
-        });
-    </script>
-
-
+    <script src="./search.js"></script>
+    
 </body>
 
 </html>
