--- a/Ron/房東/房東_加入新房源/AddHouse09/AddHouse09_Price.html
+++ b/Ron/房東/房東_加入新房源/AddHouse09/AddHouse09_Price.html
@@ -46,7 +46,8 @@
                 font-size: 48px;
                 color: white;
             }
-            .nextstep{
+
+            .nextstep {
                 width: 50vw;
             }
         }
@@ -82,7 +83,7 @@
         .nextstep {
             /* margin-top: auto; */
             /* max-height: 100px; */
-            
+
             background-color: white;
             z-index: 2;
             position: fixed;
@@ -117,12 +118,14 @@
 
             <div class="col-md-6 col-12 Options pt-md-5 ">
                 <div class="row justify-content-center pt-5 OptionsRow9">
-                    <div class="col-10 col-md-8 my-auto text-center pt-md-5 ">
+                    <div class="col-10 col-md-12 my-auto text-center pt-md-5 pb-5 ">
                         <button class="btn me-3"><i class="fas fa-minus-circle"></i></button>
                         <input type="text" id="input_price" value="$500">
                         <button class="btn ms-3"><i class="fas fa-plus-circle"></i></button>
-                        <div class="mt-3">每晚</div>
-                        <div class="mt-5 fs-3">請留意，與你的房源類似的住宿，價格通常落在 $603 至 $1,005 之間。</div>
+                    </div>
+                    <div class="col-12 col-md-12">
+                        <div class=" text-center fw-bolder fs-3 pb-5">每晚</div>
+                        <div class=" fs-6 text-center">請留意，與你的房源類似的住宿，價格通常落在 $603 至 $1,005 之間。</div>
                     </div>
                 </div>
                 <div class="row">
