--- a/Sean/index template.html
+++ b/Sean/index template.html
@@ -7,71 +7,61 @@
     <link rel="stylesheet" href="./normalize.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="/Sean/index-style.css">
+    <link rel="stylesheet" href="./index-style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="/11.css"> -->
     <title>Document</title>
     <style>
-        .section1 {
-            margin-top: 150px;
+        .or{
+            height: 60px;
+            line-height: 60px;
+            text-align: center;
+        }
+        .or .line{
+            display: inline-block;
+            width: 200px;
+            border-top: 1px solid #ccc;
+        }
+        .or .text{
+            vertical-align: -8%;
+        }
+        .button5{
+            border-radius: 10px;
+            background-color: white;
+            text-align: center;
             font-weight: bold;
-            margin-left: 135px;
+            border: 1px solid black;
+            height: 45px;
+            width: 400px;
         }
 
-        .rightbox {
-            box-sizing: border-box;
-            border: 1px solid gray;
-            border-radius: 5px;
-            padding: 25px;
-            height: 75vh;
-
+        .button5:hover{
+            background-color:rgb(245, 239, 239);
         }
 
-        .rbh {
-            font-size: 25px;
-            font-weight: bold;
-            margin-top: 15px;
-            color: rgb(65, 54, 54);
+        .modal2{
+            width: 600px;
         }
 
-        .rbh2 {
-            font-size: 19px;
-            font-weight: bold;
-            margin-top: 15px;
-            color: rgb(65, 54, 54);
-        }
-
-        .rbht {
-            margin-top: 25px;
-            font-size: 20px;
-            color: rgb(65, 54, 54);
-        }
-
-        .sec-1 {
+        .select1{
             display: flex;
             flex-wrap: wrap;
-            justify-content: space-between;
-            font-size: 20px;
+            justify-content: center;
+            align-items: center;
         }
-
-        .select2 {
-            width: 95px;
-            height: 60px;
-            border-radius: 10px;
-            ;
-            background-color: rgb(6, 146, 156);
-            color: aliceblue;
-            font-weight: bold;
-            font-size: 20px;
+        .select2{
+            width:400px;height:40px;
+            border-radius: 10px;;  
+            background-color: rgb(235, 17, 100);
+            color: aliceblue; 
             border: 0ch;
         }
-
-        .linkline {
-            color: rgb(3, 94, 100);
+        .select2:hover{
+            background-color: rgb(212, 57, 117)
         }
     </style>
 </head>
+
 
 
 <body>
@@ -79,7 +69,7 @@
         <div class="container flex-nowrap">
             <!-- 以下 logo 的連結記得要換 -->
             <a href="./index.html" class="navbar-brand col-1">
-                <img src="/Sean/creatures of corner.png" alt="Creatures of Corner" class="logo">
+                <img src="./creatures of corner.png" alt="Creatures of Corner" class="logo">
             </a>
 
             <div class="btn-group">
@@ -97,83 +87,57 @@
         </div>
     </nav>
 
-    <section class="section1">
-        <p>帳號 > 登入與安全性</p>
-        <h2>登入與安全性</h2>
-        <p class="mt-5" style="color:rgb(3, 94, 100)">登入</p>
-        <hr style="border : 3px solid rgb(13, 183, 196);" class="mt-2 mb-0" width="80px" />
-        <hr style="border : 0.5px solid grey;" class="mt-0" width="650px" />
-    </section>
-
-    <section>
-        <div class="container">
-            <div class="row">
-
-                <div class="col-12 col-md-6 mt-5">
-                    <h2 class="mt-3 fw-bold">登入</h2>
-                    <div class="sec-1 mt-5">
-                        <p>密碼</p>
-                        <a href="" class="linkline">更新</a>
+    <div class="modal" id="loginModal" tabindex="-1" >
+        <div class="modal-dialog">
+            <div class="modal-content d-flex modal2">
+                <div class="modal-header font-weight:bold">
+                    <h5 class="modal-title fs-3">登入或註冊</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p class="fs-2 font-weight:bold">Airbnb歡迎你</p>
+                </div>
+                <div class="select1">
+                    <select class="form-select form-select-lg mb-3 w-75" aria-label=".form-select-lg example">
+                        <option selected>臺灣(+866)</option>
+                        <option value="1">美國</option>
+                        <option value="2">中國</option>
+                        <option value="3">日本</option>
+                    </select>
+                    <div class="input-group flex-nowrap w-75">
+                        <input type="text" class="form-control" placeholder="電話號碼" aria-label="Username" aria-describedby="addon-wrapping">
                     </div>
-                    <p>上次更新：7 天前</p>
-                    <hr style="border : 1px solid  grey;" class="mt-5" />
-                    <h2 class="mt-5 fw-bold">社群帳號</h2>
-                    <div class="sec-1 mt-5">
-                        <p>Facebook</p>
-                        <a href="" class="linkline">連結</a>
-                    </div>
-                    <p>未連結</p>
-                    <hr style="border : 1px solid  grey;" class="mt-5" />
-                    <div class="sec-1 mt-5">
-                        <p>Google</p>
-                        <a href="" class="linkline">取消連結</a>
-                    </div>
-                    <p>取消連結</p>
-                    <hr style="border : 1px solid  grey;" class="mt-5" />
-                    <h2 class="mt-5 fw-bold">裝置紀錄</h2>
-                    <div class="sec-1 mt-5">
-                        <p>Windows 10.0 · Chrome</p>
-                        <a href="" class="linkline">登出紀錄</a>
-                    </div>
-                    <p>動態生成現在日期</p>
-                    <hr style="border : 1px solid  grey;" class="mt-5" />
-
+                </div>
+                <p class="mt-2 p-3">我們會打電話或傳簡訊，以確認你的電話號碼。可能會產生一般簡訊和數據傳輸費用。
+                <u class="" style="font-weight:bold">私隱政策</u></p>
+                
+                <div class="d-flex justify-content-center align-items-center">
+                    <input class="select2" type="button" value="繼續">
                 </div>
 
-                <div class="col-12 col-md-2 mt-5">
-
+                <div class="or">
+                    <span class="line"></span>
+                    <span class="text">或</span>
+                    <span class="line"></span>
                 </div>
-                <div class="col-12 col-md-4 rightbox">
-                    <i class="fas fa-shield-alt fs-1"></i>
-                    <h2 class="rbh">讓你的帳號更加安全</h2>
-                    <p class="rbh2">你的帳號安全：低</p>
-                    <p class="rbht">我們不斷致力提升Airbnb用戶的安全性。 正因如此，我們會檢查每個帳號，盡可能確保所有人的資料都安全無虞。
-                    </p>
-                    <hr style="border : 0.5px solid grey;" class="mt-5" width="80px" />
-                    <div class="">
-                        <input class="select2 mt-3" type="button" value="改進">
-                    </div>
+
+                <div class="d-flex flex-wrap justify-content-center align-items-center mt-2">
+                    <button class="button5"><i class="fab fa-facebook-square fs-3 mx-2"></i>繼續使用Facebook登入</button>
+                    <button class="button5 mt-2"><i class="fab fa-google fs-3 mx-2"></i>繼續使用Google登入</button>
+                    <button class="button5 mt-2"><i class="fab fa-apple fs-3 mx-2"></i>使用Apple帳號登入</button>
+                    <button class="button5 mt-2"><i class="fas fa-envelope fs-3 mx-2"></i>繼續使用電子郵件帳號登入</button>
+                </div>
+
+
+                <div class="modal-footer">
+            
                 </div>
             </div>
         </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-12 mt-5">
-                    <h2 class="mt-5 fw-bold">帳號</h2>
-                    <div class="sec-1 mt-5">
-                        <p>停用你的帳號</p>
-                        <a href="" class="linkline" style="color: red;">停用</a>
-                    </div>
-                    <hr style="border : 1px solid  grey;" class="mt-5" />
-                </div>
-            </div>
-        </div>
-    </section>
-
-
+    </div>
 
     <footer class="bg-light w-100">
-        <div class="container my-3">
+        <div class="container-fluid my-3">
             <div class="row justify-content-space-between">
                 <div class="col-12 col-md-3 border-bottom">
                     <ul>
