--- a/Sean/會員/登入註冊/個人資料/10.html
+++ b/Sean/會員/登入註冊/個人資料/10.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./normalize.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./index-style.css">
+    <link rel="stylesheet" href="/Sean/index-style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="/10.css"> -->
@@ -59,7 +59,7 @@
         <div class="container flex-nowrap">
             <!-- 以下 logo 的連結記得要換 -->
             <a href="./index.html" class="navbar-brand col-1">
-                <img src="./creatures of corner.png" alt="Creatures of Corner" class="logo">
+                <img src="/Sean/creatures of corner.png" alt="Creatures of Corner" class="logo">
             </a>
 
             <div class="btn-group">
